# carbon-shell

./: .gitignore  LICENSE.md  README.md  color.scss  colors.py  env  install.py  install.sh  main.py  pyproject.toml  requirements.md  rofi.py  setup.py  setup.sh  system.py  test.py  whiteboard.txt
Config/: .zshrc  transfer.json
Config/alacritty/: alacritty.toml  colors.toml
Config/dunst/: dunstrc
Config/fastfetch/: config.jsonc
Config/hypr/: hypridle.conf  hyprland.conf  hyprlock.conf  settings.conf
Config/kitty/: color.conf  kitty.conf  theme.conf
Config/quickshell/: shell.qml
Config/rofi/: battery.rasi  clipboard.rasi  config.rasi  confirmation.rasi  launcher.rasi  launcher.sh  power.rasi  powermenu.sh  screenshot.rasi  style.rasi  system.rasi  themer.rasi  windows.rasi
Config/starship/: starship.toml
Config/zsh/: .zshenv  .zshrc
carbon/: __main__.py  args.py  color.py  helpers.py  install.py  main.py  settings.py
carbon/cli/: args.py  main.py  (+2 more)
controllers/: launch.sh  player.py  power.py  run.py  screenshot.py  theme.py  wifi.py
defaults/: colors.toml  config.toml
docs/: bindings.md  cli.md  configuration.md  features.md  installation.md  requirements.md  todo.md
hypr/: hypr  hypridle.conf  hyprland.conf  hyprlock.conf  hyprsunset.conf  hyprviz.conf
info/: colors.json  config.json
installation/: apps_packages.sh  core_packages.sh  install.py
mShell/: __main__.py  install.py  misc.py
misc/: TODO.md
scripts/: battery.sh  launcher.sh  power.sh  system.sh  windows.sh
settings/: colors.toml  configs.toml
utils/: carbon.brightness
(+250 files in other folders)
