[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["carbon"]

[project]
name = "carbon"
version = "1.2.0"
description = "Carbon Shell"
readme = "README.md"
requires-python = ">=3.10"
authors = [
	{ name = "haseeb" }
]
dependencies = [
    "material-color-utilities",
    "toml",
    "nmcli",
    "simpleeval"
]